[package]
name = "iced_context_menu"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14", features = ["advanced", "svg"] }

[[example]]
name = "right_click"
path = "examples/right_click.rs"

[[example]]
name = "two_region_hit_test"
path = "examples/two_region_hit_test.rs"

[dev-dependencies]
iced = { version = "0.14", features = ["advanced", "svg"] }


